# cowboy_vs_ninja_a

./: CMakeLists.txt  Demo.cpp  Test.cpp
sources/: Character.cpp  Character.hpp  Cowboy.cpp  Cowboy.hpp  Ninja.cpp  Ninja.hpp  OldNinja.cpp  Point.cpp  Point.h  Point.hpp  SmartTeam.cpp  Team.cpp  Team.hpp  Team_b.cpp  Team_b.hpp  TrainedNinja.cpp  YoungNinja.cpp  YoungNinja.hpp
